--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "fs": "^0.0.1-security",
+    "jsonwebtoken": "^8.5.1",
+    "ngrok": "^4.3.0",
     "nodemon": "^2.0.15",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -23,7 +25,7 @@
     "window": "^4.2.7"
   },
   "scripts": {
-    "server": "nodemon server/server.js",
+    "server": "nodemon src/server/server.js",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
