--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "dotenv": "^16.0.0",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
+    "mysql": "^2.18.1",
     "ngrok": "^4.3.0",
+    "node-fetch": "^3.2.0",
     "nodemon": "^2.0.15",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -21,6 +23,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "request": "^2.88.2",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4",
     "window": "^4.2.7"
   },
