--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "fs": "^0.0.1-security",
+    "http-proxy-middleware": "^2.0.3",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "ngrok": "^4.3.0",
     "node-fetch": "^3.2.0",
-    "nodemon": "^2.0.15",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-naver-login": "^0.1.4",
@@ -31,10 +31,10 @@
     "server": "nodemon src/server/server.js",
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "dev": "concurrently \"nodemon src/server/server.js\" \"npm start\"",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:3002",
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -52,5 +52,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "concurrently": "^7.0.0",
+    "nodemon": "^2.0.15"
   }
 }
